Ajouts des fichiers

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
         <!-- Appel du fichier contenant le code jQuery -->
-        <script src="style.js"></script>
+        <script src="js/style.js"></script>
     </body>
 </html>
